2000-08-08  Peter Stephenson  <pws@csr.com>

	* unposted: Src/xmods.conf, Src/Aliases/*: Remove Src/Aliases
	files and delete alias modules from xmods.conf (should now
	use `zmodload -A' to generate module aliases).

	* 12561: Completion/Builtins/_zmodload, Doc/Zsh/builtins.yo,
	Src/builtin.c, Src/module.c, Src/zsh.h: aliases for modules
	done internally via `zmodload -[AR]'.

2000-08-07  Peter Stephenson  <pws@csr.com>

	* 12555: Fix static linking on cygwin.

2000-08-07  Bart Schaefer  <schaefer@zsh.org>

	* users/3358: Zero shout when closing SHTTY in subshells.

2000-08-05  Bart Schaefer  <schaefer@zsh.org>

	* unposted (Wayne, 12549): Src/system.h: Missing paren.

2000-08-04  Bart Schaefer  <schaefer@zsh.org>

	* 12547, 12458: configure.in, Src/compat.c, Src/Modules/files.c:
	Handle ENOENT and ENOTDIR within zpathmax(), and therefore back
	out the changes from 12541 and 12533.

2000-08-04  Clint Adams  <schizo@debian.org>

	* 12541: configure.in, Src/compat.c: zrealpath wrapper around
	realpath().

	* 12533: Src/Modules/files.c: drop the tail of the path
	passed to mkdir in the call to pathconf().

2000-08-04  Sven Wischnowsky  <wischnow@zsh.org>

	* 12525: Src/module.c: remove (wrong) test for linked-in modules
 	in require_module()
	
2000-08-04  Bart Schaefer  <schaefer@zsh.org>

	* 12516: Src/compat.c, Src/system.h, Src/Modules/files.c,
	Src/Modules/parameter.c: Rewrite the pathconf() support using a
	wrapper function in compat.c to isolate the #ifdefs.

2000-08-03  Peter Stephenson  <pws@csr.com>

	* Andrej: 12501: Src/params.c: getenv etc. become zgetenv etc.
	and call getenv where necessary.

2000-08-03  Sven Wischnowsky  <wischnow@zsh.org>

	* 12503: Completion/Commands/_bash_completions,
 	Completion/Commands/_complete_debug,
 	Completion/Commands/_complete_help,
 	Completion/Commands/_correct_word,
 	Completion/Commands/_expand_word,
 	Completion/Commands/_history_complete_word,
 	Completion/Commands/_next_tags, Completion/Core/_expand,