@@ -1,3 +1,9 @@
+2000-08-08  Sven Wischnowsky  <wischnow@zsh.org>
+
+	* 12565: Completion/Core/_expand, Completion/Core/_path_files,
+ 	Doc/Zsh/mod_computil.yo, Src/Zle/computil.c: more fixes for
+ 	completion of special characters (quoting)
+	
 2000-08-08  Peter Stephenson  <pws@csr.com>
 
 	* unposted: Src/xmods.conf, Src/Aliases/*: Remove Src/Aliases
